Suppression requete XML
Suppression requete XML
decorelation couche rest et service
repackaging war
