# ouranos-war/src/main/java/fr/gnss/constellation/ouranos/api/resource/mapper/BeanParamToVisibleSatParamDTOMapper.java
@@ -7,7 +7,7 @@ import java.time.ZoneId;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import fr.gnss.constellation.ouranos.api.resource.bean.VisibleSatParam;
+import fr.gnss.constellation.ouranos.api.resource.bean.IVisibleSatParam;
 import fr.gnss.constellation.ouranos.librairy.coordinate.GeodeticCoordinate;
 import fr.gnss.constellation.ouranos.service.process.satelitevisible.bean.VisibleSateliteRequestBean;
 
@@ -15,13 +15,13 @@ public class BeanParamToVisibleSatParamDTOMapper {
 
 	private final static Logger LOGGER = LoggerFactory.getLogger(BeanParamToVisibleSatParamDTOMapper.class);
 
-	public static VisibleSateliteRequestBean beanVisibleSatParamToDTO(VisibleSatParam source) {
+	public static VisibleSateliteRequestBean beanVisibleSatParamToDTO(IVisibleSatParam source) {
 		return createBeanVisibleSatParamToDTO(source);
 	}
 
 	// -------------------- Methodes internes --------------------
 
-	private static VisibleSateliteRequestBean createBeanVisibleSatParamToDTO(VisibleSatParam source) {
+	private static VisibleSateliteRequestBean createBeanVisibleSatParamToDTO(IVisibleSatParam source) {
 
 		VisibleSateliteRequestBean dto = null;
 
@@ -31,17 +31,17 @@ public class BeanParamToVisibleSatParamDTOMapper {
 				dto = new VisibleSateliteRequestBean();
 				if (source.getTimeStampStart() != null) {
 					Long value = Long.parseLong(source.getTimeStampStart());
-					Instant start = Instant.ofEpochMilli(value.longValue());
+					Instant start = Instant.ofEpochSecond(value.longValue());
 					dto.setDateDebut(LocalDateTime.ofInstant(start, ZoneId.of("UTC")));
 				}
 
 				if (source.getTimeStampEnd() != null) {
 					Long value = Long.parseLong(source.getTimeStampEnd());
-					Instant fin = Instant.ofEpochMilli(value);
-					dto.setDateDebut(LocalDateTime.ofInstant(fin, ZoneId.of("UTC")));
+					Instant fin = Instant.ofEpochSecond(value);
+					dto.setDateFin(LocalDateTime.ofInstant(fin, ZoneId.of("UTC")));
 				}
 
-				Double value = Double.parseDouble(source.getElevationMask());
+				Double value = Math.toRadians(Double.parseDouble(source.getElevationMask()));
 				dto.setRadElevationMask(value);
 
 				if (source.getLatitude() != null && source.getLongitude() != null && source.getAltitude() != null) {
@@ -49,8 +49,7 @@ public class BeanParamToVisibleSatParamDTOMapper {
 					Double longi = Double.parseDouble(source.getLongitude());
 					Double alt = Double.parseDouble(source.getAltitude());
 
-					GeodeticCoordinate geoDTO = new GeodeticCoordinate(lat.doubleValue(), longi.doubleValue(),
-							alt.doubleValue());
+					GeodeticCoordinate geoDTO = new GeodeticCoordinate(lat.doubleValue(), longi.doubleValue(), alt.doubleValue());
 					dto.setGeodeticCoordinate(geoDTO);
 				}
 			} catch (NumberFormatException e) {
